--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -3,7 +3,7 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-body {
+ body {
   width: 100%;
   height: 100%;
   font-family: 'Lato', sans-serif;
@@ -412,4 +412,8 @@ body {
     padding-left: 15px;
     text-align: center;
   }
+}
+#modal{
+color:red;
+  background-color: #1f1f1f;
 }
